Рефакторинг структуры проекта: переименование и реорганизация папок (#60)
* implement clean architecture

* added success 200 responses to swagger docs

* update mock generation path

* update product mocks paths

* reorganize mocks and main
