# docs/swagger.yaml
@@ -2,26 +2,37 @@ basePath: /api
 definitions:
   models.Product:
     properties:
-      count:
-        type: integer
       description:
         type: string
       id:
-        type: integer
+        type: string
       name:
+        type: string
+      preview_image_url:
         type: string
       price:
         type: integer
-      rating:
-        type: number
-      reviews_count:
+      quantity:
         type: integer
+      rating:
+        type: integer
+      reviews_count:
+        description: Добавлено поле
+        type: integer
+      seller_id:
+        type: string
+      status:
+        type: string
+      updated_at:
+        type: string
     type: object
   models.User:
     properties:
       email:
         type: string
       id:
+        type: string
+      imageURL:
         type: string
       name:
         type: string
@@ -48,7 +59,7 @@ definitions:
       surname:
         type: string
     type: object
-  utils.ErrorResponse:
+  response.ErrorResponse:
     properties:
       message:
         type: string
@@ -86,15 +97,15 @@ paths:
         "400":
           description: Ошибка валидации
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
         "401":
           description: Неверные email или пароль
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
       summary: Login user
       tags:
       - auth
@@ -109,11 +120,11 @@ paths:
         "401":
           description: Пользователь не найден
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
         "500":
           description: Ошибка сервера
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
       security:
       - TokenAuth: []
       summary: Logout user
@@ -146,18 +157,51 @@ paths:
         "400":
           description: Некорректный запрос
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
         "409":
           description: Пользователь уже существует
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
         "500":
           description: Внутренняя ошибка сервера
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
       summary: Register user
       tags:
       - auth
+  /files/{objectID}:
+    get:
+      description: Возвращает URL для доступа к файлу в MinIO
+      parameters:
+      - description: ID объекта в MinIO
+        in: path
+        name: objectID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Ссылка на файл
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Неверный ID объекта
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "404":
+          description: Файл не найден
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Ошибка сервера
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Получить файл по ID
+      tags:
+      - files
   /products/:
     get:
       description: Возвращает список всех продуктов
@@ -173,7 +217,7 @@ paths:
         "500":
           description: Ошибка сервера
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
       summary: Получить все продукты
       tags:
       - products
@@ -196,11 +240,11 @@ paths:
         "400":
           description: Некорректный ID
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
         "404":
           description: Продукт не найден
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
       summary: Получить продукт по ID
       tags:
       - products
@@ -223,18 +267,82 @@ paths:
         "400":
           description: Некорректный ID
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
         "404":
           description: Обложка не найдена
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
         "500":
           description: Ошибка сервера
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
       summary: Получить обложку продукта
       tags:
       - products
+  /products/upload:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Загружает один файл в хранилище MinIO
+      parameters:
+      - description: Файл для загрузки
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Информация о загруженном файле
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Ошибка в запросе
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Ошибка сервера
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Загрузить файл в MinIO
+      tags:
+      - products
+  /users/avatar:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Загружает аватар пользователя
+      parameters:
+      - description: Файл изображения
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: URL загруженного аватара
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Ошибка при обработке формы
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Ошибка загрузки файла
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      security:
+      - TokenAuth: []
+      summary: Upload avatar
+      tags:
+      - users
   /users/me:
     get:
       description: Получение информации о текущем пользователе
@@ -248,15 +356,15 @@ paths:
         "400":
           description: Некорректный запрос
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
         "401":
           description: Пользователь не найден
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
         "500":
           description: Ошибка сервера
           schema:
-            $ref: '#/definitions/utils.ErrorResponse'
+            $ref: '#/definitions/response.ErrorResponse'
       security:
       - TokenAuth: []
       summary: Get user info
